# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
#

2005-05-09 13:04:04 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-89

    Summary:
      html, add non standard "embed" empty tag
    Revision:
      itools--main--0.8--patch-89


    modified files:
     Changelog html/parser.py


2005-05-09 11:04:38 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-88

    Summary:
      i18n, fix "igettext --pot"
    Revision:
      itools--main--0.8--patch-88


    modified files:
     Changelog i18n/igettext.py


2005-05-03 13:08:09 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-87

    Summary:
      i18n, fix igettext
    Revision:
      itools--main--0.8--patch-87


    modified files:
     Changelog i18n/igettext.py


2005-05-03 12:59:15 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-86

    Summary:
      backport fix from the 0.9 branch
    Revision:
      itools--main--0.8--patch-86

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.9--patch-24
       handlers, fix "set_handler"
    

    modified files:
     Changelog handlers/Folder.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.9--patch-24


2005-05-02 17:53:27 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-85

    Summary:
      xhtml, fix "get_messages"
    Revision:
      itools--main--0.8--patch-85


    modified files:
     Changelog xhtml/XHTML.py


2005-04-21 10:53:56 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-84

    Summary:
      handlers, fix the CSV handler when called with an empty resource
    Revision:
      itools--main--0.8--patch-84


    modified files:
     Changelog handlers/CSV.py


2005-04-18 16:17:37 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-83

    Summary:
      xml, fix STL, don't include the XML header on output
    Revision:
      itools--main--0.8--patch-83


    modified files:
     Changelog xml/STL.py

